fix firefox alignment

--- a/scss/_check.scss
+++ b/scss/_check.scss
@@ -37,7 +37,6 @@
         content: $bbsky-char-check-nostroke;
         font-family: BBSKY;
         font-size: $bb-font-size-sm;
-        vertical-align: middle;
     }
 }
 
